# Programacion-UNLAM

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  VALGRIND_GUIA.md  flake.nix
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 9rh3h3ap7hkb9vj9lmm0xpi943n3ldk8-source  fvb3fhm8c193i6692v5223bxpa5w2nv7-source
Algoritmos/: .clangd  Doxyfile  README.md  Repaso.workspace  TDAs.workspace  TDAs.workspace.layout  Unidad2.workspace  Unidad3.workspace  Unidad5.workspace  Unidad6.workspace  compile_commands.json  gen_compile_commands.sh
Algoritmos/.atl/: .skill-registry.cache.json  skill-registry.md
Algoritmos/TDAs/: TESTING.md
Algoritmos/Workspaces/: Repaso.workspace.layout  TDAs.workspace  TDAs.workspace.layout  Unidad1.workspace  Unidad2.workspace  Unidad2.workspace.layout  Unidad3.workspace  Unidad4.workspace
Algoritmos/includes/: Arbol.h  Cola.h  ColaCircular.h  Comun.h  Fecha.h  ListaDoble.h  ListaSimple.h  Pila.h  PilaCircular.h  UtilsPila.h  Vector.h  binary_tree.h  circular_queue.h  circular_stack.h  double_list.h  dynamic_queue.h  dynamic_stack.h  simple_list.h  static_queue.h  static_stack.h  test_framework.h  types.h
Analisis de sistemas/: .gitignore
Analisis de sistemas/Ejercicios/: Amazon GO.vpp.bak_000d  Amazon GO.vpp.bak_000f  Amazon GO.vpp.bak_001d  Amazon GO.vpp.bak_001f  Analisis de sistemas.vpp  Analisis de sistemas.vpp.bak  Analisis de sistemas.vpp.bak_001d  Analisis de sistemas.vpp.bak_002d  Analisis de sistemas.vpp.bak_003d  Analisis de sistemas.vpp.bak_004d  Analisis de sistemas.vpp.bak_005d  BINBIN.vpp  (+36 more)
Bases de Datos/: Ejercicio1.sql  Ejercicio11.sql  Ejercicio12.sql  Ejercicio13.sql  Ejercicio2.sql  docker-compose.yml  main.sql
DiseñoDeSistemas/: EJ4.xmi
Programacion Estructurada Basica/: CMakeLists.txt  Ejercicios.c  EjerciciosArchivos.c  EjerciciosCorteDeControl.c  EjerciciosMatrices.c  EjerciciosPunteros.c  EjerciciosStrings.c  EjerciciosStruct.c  EjerciciosVectores.c  ejemplos.c  main.c
Programacion Estructurada Basica/archivosParaEjercicios/: STOCK.dat:Zone.Identifier  productos.csv  vuelos.csv
Programacion Estructurada Basica/archivosParaEjercicios/7.7/: Microprogramada.xlsx
Programacion Estructurada Basica/includes/: flush.c  flush.h  myShortCuts.c  myShortCuts.h
Programacion Estructurada Basica/parciales/: parcial1.c  parcial2.c  parcial3.c  parcial4.c  parcial5.c  parcial6.c
Sitemas Operativos/: README.md
bases_de_datos/: EJ1.sql  EJ11.sql  EJ12.sql  EJ13.sql  EJ2.sql  EJ3.sql  EJ4.sql  EJ5.sql  EJ6.sql  EJ7.sql  EJ8.sql  EJ9.sql  clase6.sql  main.sql
(+476 files in other folders)
