cmake_minimum_required(VERSION 3.26)
project(Programacion_Estructurada_Basica C)

set(CMAKE_C_STANDARD 17)



add_executable(Ejemplos main.c)
add_executable(Ejercicios Ejercicios.c)
add_executable(EjerciciosStruct EjerciciosStruct.c)
add_executable(EjerciciosPunteros EjerciciosPunteros.c)
add_executable(EjerciciosArchivos EjerciciosArchivos.c)
