cmake_minimum_required(VERSION 3.10)
project(Programacion_Estructurada_Basica)
set(CMAKE_C_STANDARD 23)
set(CMAKE_BUILD_TYPE Debug)

include_directories(${CMAKE_SOURCE_DIR}/includes)
include_directories(${CMAKE_SOURCE_DIR}/parciales)
add_library(myShortCuts STATIC includes/myShortCuts.c)

add_executable(EjerciciosVectores EjerciciosVectores.c)
add_executable(EjerciciosMatrices EjerciciosMatrices.c)
target_link_libraries(EjerciciosMatrices myShortCuts)
add_executable(EjerciciosStrings EjerciciosStrings.c)
target_link_libraries(EjerciciosStrings myShortCuts)
add_executable(EjerciciosStruct EjerciciosStruct.c)
target_link_libraries(EjerciciosStruct myShortCuts)
add_executable(EjerciciosPunteros EjerciciosPunteros.c)
target_link_libraries(EjerciciosPunteros myShortCuts)
add_executable(EjerciciosArchivos EjerciciosArchivos.c)
target_link_libraries(EjerciciosArchivos myShortCuts)
add_executable(EjerciciosCorteDeControl EjerciciosCorteDeControl.c)
target_link_libraries(EjerciciosCorteDeControl myShortCuts)
add_executable(parcial1 parciales/parcial1.c)
target_link_libraries(parcial1 myShortCuts)
add_executable(parcial2 parciales/parcial2.c)
target_link_libraries(parcial2 myShortCuts)

